--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -62,6 +62,10 @@
   justify-content: center;
   align-items: center;
   //margin: 20px 20px;
+
+  @include media($mobile) {
+    padding: 20px 20px 60px 20px;
+  }
 }
 
 .container--featuredNews {
@@ -120,6 +124,7 @@
   @include media($mobile) {
     display: flex;
     flex-direction: column;
+    min-width: 80%;
   }
 }
 
@@ -179,44 +184,70 @@
   color: black;
   background-color: #efefef;
   padding: 20px 20px 20px 20px;
+
+  @include media($mobile) {
+    min-height: 100vh;
+  }
 }
 
 .sign-in-section__header {
   text-align: center;
+  padding: 60px 0;
+
+  @include media($mobile) {
+    padding: 20px 0;
+  }
 }
 
 .sign-in-form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   width: 100%;
-  gap: 10px;
+  height: 100%;
+  gap: 40px;
   align-items: center;
   padding: 20px 20px 20px 20px;
   width: 100vw;
   margin: 0 auto;
 
   @include media($mobile) {
-    //height: 80vh;
+    height: 819px;
+    min-height: 819px;
   }
 
   label {
     font-weight: bold;
   }
 
+  .left {
+    justify-self: end;
+  }
+
+  .right {
+    justify-self: start;
+  }
+
   .form-input {
     display: flex;
     flex-direction: column;
-    justify-self: center;
-    width: 40vw;
+    //justify-self: center;
+    width: 100%;
+    max-width: 477px;
     label {
       margin-bottom: 5px;
     }
     input,
     textarea {
+      width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
+    }
+
+    @include media($mobile) {
+      justify-self: center;
+      width: 100%;
     }
   }
 
@@ -228,11 +259,16 @@
   .form-checkboxes {
     display: flex;
     flex-direction: column;
-    justify-self: center;
+    //justify-self: center;
     height: 100%;
-    width: 40vw;
+    width: 100%;
+    max-width: 477px;
     justify-content: space-between;
     padding-top: 20px;
+
+    @include media($mobile) {
+      justify-self: center;
+    }
   }
 
   .form-checkbox-group {
@@ -253,11 +289,11 @@
     background-color: #d2a679;
     color: white;
     border: none;
-    border-radius: 4px;
-    width: 20vw;
+    border-radius: 1px;
+    font-weight: bold;
+    width: 320px;
     cursor: pointer;
     transition: background-color 0.3s;
-    width: 40%;
     height: auto;
 
     &:hover {
@@ -325,6 +361,6 @@ footer {
   }
 
   div {
-    margin: 0 5vw;
+    padding: 0 60px;
   }
 }
